--- a/datasource.yml
+++ b/datasource.yml
@@ -7,7 +7,7 @@ datasources:
     write: root:root@tcp(127.0.0.1:3306)/my_db_0?charset=utf8mb4&parseTime=True
     read: root:root@tcp(127.0.0.1:3306)/my_db_0?charset=utf8mb4&parseTime=True
 
-sql_log: true
+sql_log: false
 slow_sql_log: 500
 
 redis_host: 127.0.0.1
